<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/diglogname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/NewHabit"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/habitname"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:hint="@string/HabitTitle"
            android:textSize="14dp" />

        <EditText
            android:id="@+id/remindtext"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:hint="@string/warningQuestion"
            android:textSize="14dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="79dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="117dp"
                android:layout_height="57dp"
                android:text="@string/warning" />

            <Button
                android:id="@+id/alarm_time"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:background="@mipmap/resize_1"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="256dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/warningTime" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="256dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/remindtime"
                android:textAlignment="viewStart"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="177dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnsave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/save"
                android:textColor="#000000"
                android:textSize="18dp" />

            <Button
                android:id="@+id/btncencel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/giveup"
                android:textColor="#000000"
                android:textSize="18dp" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
